[package]
name = "adafruit"
version = "0.1.0"
edition = "2021"


#NUCLEO-F767ZI -->stm32f767zit
[dependencies.stm32f7]
version = "0.16.0"
features = ["stm32f767", "rt"]

[dependencies]
cortex-m ="0.7.7"
cortex-m-rt = "0.7.5"
cortex-m-semihosting = "0.5"
panic-halt = "1.0.0"
embedded-hal = "1.0.0"    # Required for embedded systems
embedded-hal-old= {package = "embedded-hal", version ="0.2.7"}  # used to create the I2C blocking for the oled
critical-section = "1.2"  # 
stm32f7xx-hal = { version = "^0.8.0", features = ["stm32f767"]}  # reauired to use HAL API
fugit = "0.3"


[lib]
name = "adafruit"  
crate-type = ["lib"]    
